<resources>
    <string name="app_name">CST2335 Final Project</string>

    <string name="difficultyLabel">Please enter your difficulty:</string>
    <string name="typeLabel">Please enter the Type:</string>
    <string name="questionLabel">Enter the # of questions: </string>
    <string name="questionHint"># of questions</string>
    <string name="typeHint">boolean, multiple</string>
    <string name="difficultyHint">easy, medium, hard</string>
    <string name="createGameString"> create your game</string>
    <string name="goToTrivia">TRIVIA GAME</string>

    <string-array name="difficulty_array">
        <item>Any Difficulty</item>
        <item>easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="type_array">
        <item>Any Type</item>
        <item>boolean</item>
        <item>multiple</item>
    </string-array>
    <string name="title_activity_soccer_main">Soc</string>
    <string name="title_activity_soccer_detail">Soc</string>
    <string name="title_activity_soccer_favorites">Soc</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="main_soccer_button">Soccer</string>
    <string name="soccer_detail_SAVE">SAVE</string>
    <string name="soccer_detail_GOTOWEB">GO TO WEB</string>
    <string name="soccer_detail_db_BackToList">Back To List</string>
    <string name="soccer_detail_db_GOTOWEB">GO TO WEB</string>
    <string name="soccer_favorite_SoccerArticles">Soccer Articles</string>
    <string name="soccer_main_button_Favorites">Favorites</string>
    <string name="soccer_fragment_ID">ID=</string>
    <string name="soccer_fragment_Link">Link=</string>
    <string name="soccer_fragment_Description">Descrption=</string>
    <string name="soccer_fragment_Date">Date=</string>
    <string name="soccer_fragment_Title">Title</string>
    <string name="soccer_rating_submit">Submit</string>
    <string name="soccer_rating_SoccerArticles">Rating App</string>
    <string name="soccer_nav_GoToMainPage">Go To Main</string>
    <string name="soccer_nav_GoToTrivia">Go To Trivia</string>
    <string name="soccer_nav_GoToCarDB">Go To CarDB</string>
    <string name="soccer_nav_GoToSoccerPage">Go To Soccer</string>
    <string name="soccer_toolbar_Search">Search</string>
    <string name="soccer_toolbar_About">Help</string>
    <string name="soccer_rating_main">Rating App</string>
    <string name="soccer_main_pg_15">Making a connection ...</string>
    <string name="soccer_main_pg_25">Start ...</string>
    <string name="soccer_main_pg_45">Extracting data ...</string>
    <string name="soccer_main_pg_70">Loading images ...</string>
    <string name="soccer_save_button">Saved!</string>
    <string name="soccer_undo_button">Favorite</string>
    <string name="soccer_previous">Go To Previous</string>
    <string name="soccer_db_delete">Do you want to delete this?</string>
    <string name="soccer_db_id">The selected row is=</string>
    <string name="soccer_db_id2">The database id is=</string>
    <string name="soccer_confirm">Okay</string>
    <string name="soccer_howToUse">How To Use</string>
    <string name="soccer_howToUse1">- Click one of items in list to check Articles</string>
    <string name="soccer_howToUse2">- Soccer Articles button heads to Soccer Main</string>
    <string name="soccer_howToUse3">- Soccer Icon is for heading to the soccer main</string>
    <string name="soccer_howToUse4">- Favorites button shows stored articles</string>
    <string name="soccer_howToUse5">- GO To WEB button shows the article of this</string>

    <!--<string name="app_name">Songster</string>-->
    <string name="songster_Heading">Tìm Kiếm</string>
    <string name="songster_artistName">Nhập tên Ca Sĩ</string>
    <string name="songster_enter_artist_hint">Nhập tên Ca Sĩ</string>
    <string name="songster_search_button">Tìm Kiếm</string>
    <string name="songster_FavouriteList">Yêu Thích</string>
    <string name="songster_SongList">Kết quả tìm kiếm</string>
    <string name="BackButton">Trở về</string>
    <string name="songster">Songster</string>
    <string name="SongId">ID Bài Nhạc:</string>
    <string name="ArtistId">ID Ca Sĩ:</string>
    <string name="ArtistName">Tên Ca Sĩ:</string>
    <string name="SongTitle">Tựa đề:</string>
    <string name="Songster_Save">Lưu</string>
    <string name="Songster_Search">Tìm Kiếm Nhạc</string>
    <string name="Songster_Search_Artist">Tìm Kiếm Ca Sĩ</string>
    <string name="Songster_Delete">Delete</string>
    <string name="favouriteList">Yêu Thích</string>
    <string name="Songster_menu_about">Nội dung</string>
    <string name="Songster_menu_help">Giúp đỡ</string>
    <string name="Songster_moreInfoAboutSong">Biết thêm về Ca sĩ?</string>
    <string name="youSelected">Bạn đã chọn</string>
    <string name="confirm">Yes</string>
    <string name="decline">No</string>
    <string name="nothingChanged">Không có gì thay đổi</string>
    <string name="SongsterSearch_EnterValidName">Nhập tên Ca Sĩ</string>
    <string name="SongsterSearch_AboutMenuItem">tìm kiến ca sĩ yêu thích</string>
    <string name="SongsterSearch_HelpMenuItem">Search for Artist or Song base on entered keywords. Hold to add song onto Favorite List</string>
    <string name="agree">OK</string>
    <string name="SongterSearch_AboutApp">Songster app created by Trung Nguyen</string>
    <string name="duplicateMessage">this Song is already saved</string>
    <string name="ConfirmationMessageofSave">Your Favourite Song is saved</string>
    <string name="AskingMessageToDelete">Are you sure you want to delete this song?</string>
    <string name="SongDetail_FavouriteListConfirmation_Add">Do you want to save this to your Favourite List?</string>
    <string name="ConfirmationMessage_Of_Deletion">has been removed from favourite</string>

    <string name="search_car_brand_here">차 브랜드 검색</string>
    <string name="search">검색</string>
    <string name="help">도움</string>
    <string name="database_view">데이터베이스</string>
    <string name="help_details">
        차 모델을 입력하고, 클릭 버튼을 눌러 차 리스트를 받으세요. 리스트 안에 차를 선택해서 세부정보를 확인해요, 차 정보를 저장하고 쇼핑할 수 있습니다.
    </string>
    <string name="help_title">차 데이터베이스 설명</string>
    <string name="help_positive">알겠습니다</string>
    <string name="back_to_car_view" translatable="false">뒤로</string>

    <string name="search_car_brand_here">Search car brand here</string>
    <string name="search">Search</string>
    <string name="help">HELP</string>
    <string name="database_view">DATABASE VIEW</string>
    <string name="help_details">Enter a car model in the search field. Click search to bring up the list of cars. Select a car in the list to bring up car details, where you can add it to your database or shop for the car.</string>
    <string name="help_title">Car database instructions</string>
    <string name="help_positive">Understood</string>
    <string name="back_to_car_view" translatable="false">Back</string>


    <string name="songster_Heading">Search</string>
    <string name="songster_artistName">Enter Artist:</string>
    <string name="songster_enter_artist_hint">Enter Artist</string>
    <string name="songster_search_button">Search</string>
    <string name="songster_FavouriteList">Favourites</string>
    <string name="songster_SongList">Results</string>
    <string name="BackButton">Back</string>
    <string name="songster">Songster</string>
    <string name="SongId">Song id:</string>
    <string name="ArtistId">Artist Id:</string>
    <string name="ArtistName">Artist Name:</string>
    <string name="SongTitle">Title:</string>
    <string name="Songster_Save">Save</string>
    <string name="Songster_Search">Search Song</string>
    <string name="Songster_Search_Artist">Search Artist</string>
    <string name="Songster_Delete">Delete</string>
    <string name="favouriteList">Favourites</string>
    <string name="Songster_menu_about">About</string>
    <string name="Songster_menu_help">Help</string>
    <string name="Songster_moreInfoAboutSong">Know more about this Artist?</string>
    <string name="youSelected">You selected</string>
    <string name="confirm">Yes</string>
    <string name="decline">No</string>
    <string name="nothingChanged">Nothing changed</string>
    <string name="SongsterSearch_EnterValidName">Enter Artist</string>
    <string name="SongsterSearch_AboutMenuItem">Search your favorite Songs</string>
    <string name="SongsterSearch_HelpMenuItem">Search for Artist or Song base on entered keywords. Hold to add song onto Favorite List</string>
    <string name="agree">OK</string>
    <string name="SongterSearch_AboutApp">Created by Trung Nguyen</string>
    <string name="duplicateMessage">Already saved</string>
    <string name="ConfirmationMessageofSave">Saved</string>
    <string name="AskingMessageToDelete">Are you sure?</string>
    <string name="SongDetail_FavouriteListConfirmation_Add">Do you want to move this into your Favourite List?</string>
    <string name="ConfirmationMessage_Of_Deletion">has been removed</string>
</resources>
